--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-baseURL: https://eternity.bora.sh # todo: change site url.
-title: Eternity # todo: change site name.
+baseURL: https://joyemery.art
+title: Joy Emery's Art
 defaultContentLanguage: 'en'
 theme: eternity
 googleAnalytics: '' # todo: set your analytics id.
@@ -7,9 +7,9 @@ googleAnalytics: '' # todo: set your analytics id.
 params:
   image: /images/banner.png
   subtitle: Eternity is a minimalist Hugo theme designed for portfolio sites with a fresh feel. # todo: change default subtitle for your website.
-  copyright: All rights reserved. # todo: set your copyright type.
-  author: Lovely Author # todo: set your full name.
-  dontShowSource: false # please, do not do this :)
+  copyright: All rights reserved.
+  author: Joy Emery
+  dontShowSource: true
   portfolio:
     columns:
       desktop:
@@ -24,20 +24,15 @@ params:
   socials:
     # todo: change these links.
     - icon: 'far fa-envelope fa-lg'
-      url: 'mailto:eternity@bora.sh'
-      landing: true
-    - icon: 'fab fa-github fa-lg'
-      url: 'https://github.com/boratanrikulu/eternity'
+      url: 'mailto:joyemery@gmail.com'
       landing: true
     - icon: 'fab fa-instagram fa-lg'
-      url: 'https://instagram.bora.sh/eternity'
-    - icon: 'fab fa-linkedin-in fa-lg'
-      url: 'https://linkedin.bora.sh/in/eternity'
-  homepage: "/work" # homepage link, mostly same with menu.main[0]
+      url: 'https://instagram.com/joyemery'
+  homepage: "/highlights"
   specialPages:
-    - work
+    - highlights
     - archive
-  bypassWelcomePage: false # redirects "/" to "homepage" when it's true.
+  bypassWelcomePage: true # redirects "/" to "homepage" when it's true.
   plausible: '' # todo: set your plausible id.
   disableRadius: false
   moveIt: false  # Moves Title and Meta info down, only visible when scroll.
@@ -52,12 +47,12 @@ taxonomies:
   tag: tags
 
 permalinks:
-  work: ":filename/"
+  highlights: ":filename/"
 
 menu:
   main:
-    - name: work
-      url: /work/
+    - name: highlights
+      url: /highlights/
       weight: 1
     - name: people
       url: /tags/people/
@@ -65,7 +60,7 @@ menu:
     - name: nature
       url: /tags/nature/
       weight: 3
-    - name: archive
+    - name: everything
       url: /tags/archive/
       weight: 4
     - name: about
