Added index pages for each art piece. They all show up on the site now, categorized by medium! Perhaps correctly...Heather will do a real pass.

--- a/config.yaml
+++ b/config.yaml
@@ -53,6 +53,15 @@ menu:
     - name: Nature
       url: /nature/
       weight: 3
+    - name: Fairy Tale
+      url: /fairy-tale/
+      weight: 4
+    - name: Installations
+      url: /installations/
+      weight: 5
+    - name: Stationary
+      url: /stationary/
+      weight: 6
     - name: Media
       url: /media/
       weight: 95
