--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ googleAnalytics: "" # todo: set your analytics id.
 
 params:
   image: /images/banner.jpg
-  logo: /images/logo.png
+  logo: /paint-logo.png
   subtitle: Art made in joy. # todo: change default subtitle for your website.
   copyright: All rights reserved.
   author: Joy Emery
@@ -19,7 +19,7 @@ params:
       mobile:
         default: 2
   socials:
-  homepage: "/highlights"
+  homepage: "/"
   specialPages:
     - highlights
     - art
